--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=10, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pedra Papel Tesoura</title>
+    <title>JoKenPo</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -13,11 +12,12 @@
 <body>
     <!-- <img class="bkg"" src="./assets/img/bg.webp" alt="Fundo" /> -->
 <header>
-    <h1 class="apres">Jogo de pedra, papel, tesoura em HTML+CSS+Javascript</h1>
+    <h1 class="apres">JoKenPo</h1>
 </header>
 <section class="jogo">
     <div class="usuario">
         <div class="usuario-escolhe">
+            <!-- TODO quando o usuário escolher, essa parte esconde... -->
             <div class="boxes">
                 <div class="box" id="paper"><img src="./assets/img/paper-green.png" alt="Papel"/></div>
                 <div class="box" id="rock"><img src="./assets/img/rock-green.png" alt="Pedra" /></div>
